--- a/src/app.json
+++ b/src/app.json
@@ -1,8 +1,11 @@
 {
   "pages": [
     "pages/index/main",
-    "pages/login/main",
-    "pages/me/main"
+    "pages/me/main",
+    "pages/details/main",
+    "pages/hall/main",
+    "pages/data/main",
+    "pages/login/main"
   ],
   "window": {
     "backgroundTextStyle": "light",
